import grpc
from concurrent import futures
import inference_pb2
import inference_pb2_grpc
import time

# A mock model class
class MyFakeModel:
    def predict(self, prompt: str) -> str:
        # In a real application, this would call your Hugging Face/PyTorch model
        print(f"Received prompt: {prompt}")
        return f"This is a generated response for the prompt: '{prompt}'"

# Implement the gRPC service
class InferencerServicer(inference_pb2_grpc.InferencerServicer):
    def __init__(self):
        self.model = MyFakeModel()

    def GenerateText(self, request, context):
        # Get the prompt from the request
        prompt = request.prompt

        # Get a prediction from the model
        generated_text = self.model.predict(prompt)

        # Return the response
        return inference_pb2.GenerateResponse(generated_text=generated_text)

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    inference_pb2_grpc.add_InferencerServicer_to_server(InferencerServicer(), server)
    server.add_insecure_port('[::]:50051')
    print("Starting Python gRPC server on port 50051...")
    server.start()
    server.wait_for_termination()

if __name__ == '__main__':
    serve()